force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>請求</label>
    <nameField>
        <displayFormat>INV-{0000000000}</displayFormat>
        <label>請求書名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>