force-app/main/default/objects/Invoice__c/fields/AmountWithTax__c.field-meta.xml
<CustomField>
    <fullName>AmountWithTax__c</fullName>
    <label>税込金額</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>