force-app/main/default/objects/Invoice__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <label>請求日</label>
    <type>Date</type>
</CustomField>