force-app/main/default/objects/Invoice__c/fields/CancelStatus__c.field-meta.xml
<CustomField>
    <fullName>CancelStatus__c</fullName>
    <label>取消ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>通常</fullName>
                <default>true</default>
                <label>通常</label>
            </value>
            <value>
                <fullName>取消済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>