force-app/main/default/objects/Invoice__c/fields/CompanyContactUser__c.field-meta.xml
<CustomField>
    <fullName>CompanyContactUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>自社担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>CompanyContactInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>