force-app/main/default/objects/Invoice__c/fields/ContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約期間</label>
    <referenceTo>ContractPeriod__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>