force-app/main/default/objects/Invoice__c/fields/Freee_Account_Item_Key__c.field-meta.xml
<CustomField>
    <fullName>Freee_Account_Item_Key__c</fullName>
    <label>Freee計上科目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sales</fullName>
                <label>売上高</label>
            </value>
            <value>
                <fullName>consulting_sales</fullName>
                <label>コンサル売上</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>