force-app/main/default/objects/Invoice__c/fields/Freee_Account_Item_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Freee_Account_Item_Picklist__c</fullName>
    <label>Freee勘定科目</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AccountsReceivable</fullName>
                <label>売掛金</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>売上</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>