force-app/main/default/objects/Invoice__c/fields/Freee_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Freee_External_Key__c</fullName>
    <externalId>true</externalId>
    <label>外部キー</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>