force-app/main/default/objects/Invoice__c/fields/Freee_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Freee_Invoice_Id__c</fullName>
    <label>freee請求書ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>