force-app/main/default/objects/Invoice__c/fields/Freee_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Freee_Invoice_Number__c</fullName>
    <label>freee請求書番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>