force-app/main/default/objects/Invoice__c/fields/Freee_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Freee_Invoice_Status__c</fullName>
    <label>Freee請求書送付ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>送付待ち</fullName>
                <default>true</default>
                <label>送付待ち</label>
            </value>
            <value>
                <fullName>送付済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>