force-app/main/default/objects/Invoice__c/fields/Freee_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Freee_Invoice_URL__c</fullName>
    <label>請求書URL</label>
    <type>Url</type>
</CustomField>