force-app/main/default/objects/Invoice__c/fields/Freee_Last_Synced_At__c.field-meta.xml
<CustomField>
    <fullName>Freee_Last_Synced_At__c</fullName>
    <label>最終同期日時</label>
    <type>DateTime</type>
</CustomField>