force-app/main/default/objects/Invoice__c/fields/Freee_Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>Freee_Sync_Message__c</fullName>
    <label>freee同期メッセージ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>