force-app/main/default/objects/Invoice__c/fields/InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmount__c</fullName>
    <label>請求金額</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>