force-app/main/default/objects/Invoice__c/fields/MigrationImportedAt__c.field-meta.xml
<CustomField>
    <fullName>MigrationImportedAt__c</fullName>
    <label>移行反映日時</label>
    <type>DateTime</type>
</CustomField>