force-app/main/default/objects/Invoice__c/fields/MigrationSourceWork__c.field-meta.xml
<CustomField>
    <fullName>MigrationSourceWork__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>移行元Freee請求Work</label>
    <referenceTo>Mig_FreeeInvoiceWork__c</referenceTo>
    <relationshipLabel>移行作成請求</relationshipLabel>
    <relationshipName>MigratedInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>