force-app/main/default/objects/Invoice__c/fields/NumberOfPeople__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPeople__c</fullName>
    <label>人数</label>
    <summarizedField>InvoiceLine__c.Quantity__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>