force-app/main/default/objects/Invoice__c/fields/OriginalInvoice__c.field-meta.xml
<CustomField>
    <fullName>OriginalInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元請求</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>再作成請求</relationshipLabel>
    <relationshipName>RecreatedInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>