force-app/main/default/objects/Invoice__c/fields/ParentContract__c.field-meta.xml
<CustomField>
    <fullName>ParentContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親契約</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>contract1</relationshipName>
    <type>Lookup</type>
</CustomField>