force-app/main/default/objects/Invoice__c/fields/ParentOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ParentOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親取引</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>oppottunity</relationshipName>
    <type>Lookup</type>
</CustomField>