force-app/main/default/objects/Invoice__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>支払期日</label>
    <type>Date</type>
</CustomField>