force-app/main/default/objects/Invoice__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>支払方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>direct_debit</fullName>
                <label>振替</label>
            </value>
            <value>
                <fullName>transfer</fullName>
                <default>true</default>
                <label>振込</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>