force-app/main/default/objects/Invoice__c/fields/PaymentReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentReceivedDate__c</fullName>
    <label>入金日</label>
    <type>Date</type>
</CustomField>