force-app/main/default/objects/Invoice__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <label>決済ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>決済待ち</fullName>
                <default>true</default>
                <label>決済待ち</label>
            </value>
            <value>
                <fullName>決済済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>