force-app/main/default/objects/Invoice__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>合計金額</label>
    <summarizedField>InvoiceLine__c.Line_Amount__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>