force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sent_To_Freee__c</columns>
    <columns>Freee_Invoice_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>