force-app/main/default/objects/Invoice__c/listViews/CurrentMonthInvoices.listView-meta.xml
<ListView>
    <fullName>CurrentMonthInvoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ParentContract__c</columns>
    <columns>Billing_Date__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>InvoiceAmount__c</columns>
    <columns>Freee_Invoice_Status__c</columns>
    <columns>PaymentStatus__c</columns>
    <columns>Freee_Sync_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>今月請求</label>
</ListView>