force-app/main/default/objects/Invoice__c/listViews/FreeeUnsyncedInvoices.listView-meta.xml
<ListView>
    <fullName>FreeeUnsyncedInvoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ParentContract__c</columns>
    <columns>Billing_Date__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>InvoiceAmount__c</columns>
    <columns>Sent_To_Freee__c</columns>
    <columns>Freee_Sync_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sent_To_Freee__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Freee未連携請求</label>
</ListView>