force-app/main/default/objects/Invoice__c/listViews/PaymentWaitingInvoices.listView-meta.xml
<ListView>
    <fullName>PaymentWaitingInvoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ParentContract__c</columns>
    <columns>Billing_Date__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>InvoiceAmount__c</columns>
    <columns>PaidAmount__c</columns>
    <columns>UnpaidAmount__c</columns>
    <columns>PaymentStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PaymentStatus__c</field>
        <operation>equals</operation>
        <value>決済待ち</value>
    </filters>
    <label>決済待ち請求</label>
</ListView>