force-app/main/default/objects/Invoice__c/listViews/SendWaitingInvoices.listView-meta.xml
<ListView>
    <fullName>SendWaitingInvoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ParentContract__c</columns>
    <columns>Billing_Date__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>InvoiceAmount__c</columns>
    <columns>Freee_Invoice_Status__c</columns>
    <columns>Freee_Invoice_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Freee_Invoice_Status__c</field>
        <operation>equals</operation>
        <value>送付待ち</value>
    </filters>
    <label>送付待ち請求</label>
</ListView>